force-app/main/default/objects/Horse_Partnership__c/Horse_Partnership__c.object-meta.xml
<CustomObject>
    <description>Horse Partnership
empowherOps</description>
    <label>Horse Partnership</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Horse Partnership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Horse Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>