force-app/main/default/objects/Horse_Partnership__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Horse Partnerships</relationshipLabel>
    <relationshipName>Horse_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>