force-app/main/default/objects/Horse_Partnership__c/fields/Horse__c.field-meta.xml
<CustomField>
    <fullName>Horse__c</fullName>
    <description>Horse</description>
    <label>Horse</label>
    <referenceTo>Horse__c</referenceTo>
    <relationshipLabel>Horse Partnerships</relationshipLabel>
    <relationshipName>Horse_Partnerships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>