force-app/main/default/objects/Horse_Partnership__c/fields/Investor_Account__c.field-meta.xml
<CustomField>
    <fullName>Investor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investor Account</description>
    <label>Investor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Horse Partnerships</relationshipLabel>
    <relationshipName>Horse_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>