force-app/main/default/objects/Horse_Partnership__c/fields/Partner_Membership__c.field-meta.xml
<CustomField>
    <fullName>Partner_Membership__c</fullName>
    <label>Partner Membership</label>
    <referenceTo>PartnerMembership__c</referenceTo>
    <relationshipLabel>Horse Partnerships</relationshipLabel>
    <relationshipName>Horse_Partnerships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>